# routes/categoryRoutes.js
@@ -8,12 +8,13 @@
 const express = require('express') 
 const router = express.Router() 
 const categoryController = require('../controllers/categoryController') 
+const authJwt = require('../middleware/authJwt');
 
-router.get('/categories', 
+router.get('/categories', authJwt.verifyToken,
     /* #swagger.tags = ['Categories'] #swagger.description = "Get all categories"  */ 
     categoryController.getAllCategories)
 
-router.post('/categories', 
+router.post('/categories', authJwt.verifyToken, authJwt.isAdmin,
     /* #swagger.tags = ['Categories'] #swagger.description = "Post new category" */ 
     categoryController.createCategory)
 
